# rust-s3c2440

./: .gitignore  Cargo.toml  README.md  justfile  rust-s3c2440.ld
.cargo/: config.toml
.gitea/workflows/: lint.yaml
applications/.cargo/: config.toml
applications/audio-test/: Cargo.toml
applications/audio-test/src/: main.rs
applications/experiment/: Cargo.toml
applications/experiment/src/: app.rs  main.rs
applications/flash-reader/: Cargo.toml
applications/flash-reader/src/: main.rs
applications/interrupt-test/: Cargo.toml
applications/interrupt-test/src/: main.rs
applications/uart-test/: Cargo.toml
applications/uart-test/src/: main.rs
libraries/rust-s3c2440-base/: Cargo.toml
libraries/rust-s3c2440-base/src/: lib.rs  manager.rs  system.rs
libraries/rust-s3c2440-hal/: Cargo.toml
libraries/rust-s3c2440-hal/src/: clock.rs  dma.rs  gpio.rs  iis.rs  interrupt.rs  l3bus.rs  lib.rs  nand.rs  s3c2440.rs  uart.rs  utils.rs
libraries/rust-s3c2440-library/: Cargo.toml
libraries/rust-s3c2440-library/src/: hardware.rs  (+3 more)
libraries/rust-s3c2440-macros/: Cargo.toml
libraries/rust-s3c2440-std/: Cargo.toml
libraries/rust-s3c2440-std/.cargo/: config.toml
libraries/rust-s3c2440-std/src/: audio.rs  io.rs  lib.rs  manager.rs  support.rs  system.rs  utils.rs
libraries/rust-s3c2440-std/src/support/: console.rs  logger.rs
libraries/rust-s3c2440-std/src/system/: clock.rs  heap.rs  interrupt.rs  stack.rs  start.rs  trap_stack.rs
libraries/rust-s3c2440-std/src/utils/: cell.rs  debug.rs  macros.rs
scripts/: convert.py  generate_wav.py  pre-commit
(+11 files in other folders)
